# rust-base

./: .dockerignore  .env-example  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci-checks.yaml
src/: main.rs
src/common/: mod.rs
src/common/base/: error.rs
src/common/entities/: base_entity.rs  mod.rs
src/common/models/: base_model.rs  mod.rs
src/common/repositories/: base_mongo_repository.rs  base_repository.rs  base_sql_repository.rs
src/common/services/: mod.rs
src/config/: mongodb.rs
src/core/: Cargo.toml  mod.rs
src/core/common/: error.rs
src/core/entities/: base_entity.rs  mod.rs
src/core/repositories/: base_mongo_repository.rs  base_repository.rs  base_sql_repository.rs  mod.rs
src/core/services/: base_service.rs
src/core/src/: lib.rs
src/core/src/application/: mod.rs
src/core/src/application/exceptions/: mod.rs
src/core/src/application/services/: base_service.rs  mod.rs
src/core/src/application/use_cases/: base_use_case.rs  mod.rs
src/core/src/domain/: mod.rs
src/core/src/domain/entities/: base_entity.rs
src/core/src/domain/errors/: mod.rs
src/core/src/domain/repositories/: base_repository.rs
src/core/src/infrastructure/config/: env_config.rs  i18n_config.rs  mod.rs  trace_config.rs
src/core/src/infrastructure/database/: error.rs  mod.rs  sql_connection.rs
src/core/src/presentation/: document.rs  mod.rs
src/core/src/presentation/controllers/: app_controller.rs  mod.rs
src/core/src/presentation/exceptions/: http_exception.rs  mod.rs
src/core/src/presentation/extensions/: mod.rs  to_http_response.rs  to_response_dto.rs
src/core/src/presentation/extractors/: mod.rs  request_context.rs  validated_json.rs
src/core/src/presentation/middlewares/: mod.rs  request_context_middleware.rs
src/core/src/shared/macros/: validator.rs
src/core/src/shared/utils/: datetime.rs
src/locales/: en.yaml
src/migrations/: Cargo.toml
src/migrations/src/: lib.rs  m20250302_143408_create_table_todos.rs
src/modules/todos/: Cargo.toml  mod.rs
src/modules/todos/controllers/: todo_controller.rs
src/modules/todos/dto/: create_todo_dto.rs  mod.rs
src/modules/todos/dto/requests/: create_todo_request.rs
src/modules/todos/dto/responses/: mod.rs  todo_response.rs
src/modules/todos/entities/: todo_entity.rs
src/modules/todos/models/: todo.rs
src/modules/todos/repositories/: todo_repository.rs
src/modules/todos/services/: todo_service.rs
src/modules/todos/src/: lib.rs
src/modules/todos/src/application/use_cases/: create_todo_use_case.rs  get_todos_use_case.rs  mod.rs
src/modules/todos/src/domain/entities/: todo_entity.rs
src/modules/todos/src/domain/repositories/: todo_repository.rs
src/modules/todos/src/infrastructure/database/models/: todo_model.rs
src/modules/todos/src/infrastructure/database/repositories/: todo_repository.rs
src/modules/todos/src/presentation/: document.rs  mod.rs
src/modules/todos/src/presentation/controllers/: todo_controller.rs
src/modules/todos/src/presentation/dtos/requests/: create_todo_request.rs  mod.rs
src/modules/todos/src/presentation/dtos/responses/: todo_response.rs
src/modules/todos/tests/e2e/: mod.rs  todo_controller.rs
src/settings/: database_setting.rs  docs_setting.rs  mod.rs
src/todos/: mod.rs
src/todos/controllers/: todo_controller.rs
src/todos/dto/: create_todo_dto.rs
src/todos/entities/: todo_entity.rs
src/todos/repositories/: todo_repository.rs
src/todos/services/: todo_service.rs
