[package]
name = "rust-base"
version = "1.0.0"
authors = ["vuphu <vuphu.itus@gmail.com>"]
edition = "2024"

[[bin]]
name = "app"
path = "src/main.rs"

[workspace]
members = [
    "src/core",
    "src/migrations",
    "src/modules/todos",
]

[workspace.dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
uuid = { version = "1.23.0", features = ["v7"] }
dotenv = "0.15.0"
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
serde_path_to_error = "0.1.20"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rust-i18n = "3.1.5"
scalar_api_reference = { version = "0.2.2", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono", "uuid"] }

[dependencies]
shared = { path = "src/core" }
todos = { path = "src/modules/todos" }
actix-web.workspace = true
utoipa.workspace = true

