[package]
name = "rust-base"
version = "1.0.0"
authors = ["vuphu <vuphu.itus@gmail.com>"]
edition = "2024"

[[bin]]
name = "app"
path = "src/main.rs"

[workspace]
members = [
    "src/core",
    "src/migrations",
    "src/modules/todos",
]

[workspace.dependencies]
actix-http = "3.12.0"
actix-rt = "2.11.0"
actix-web = "4.13.0"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
fake = "5.1.0"
rust-i18n = "3.1.5"
scalar_api_reference = { version = "0.2.2", features = ["actix-web"] }
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
uuid = { version = "1.23.0", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }

[dependencies]
shared = { path = "src/core" }
todos = { path = "src/modules/todos" }
actix-web.workspace = true
utoipa.workspace = true

