[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
sea-orm.workspace = true
dotenv.workspace = true
serde_path_to_error.workspace = true
serde_json.workspace = true
validator.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust-i18n.workspace = true
scalar_api_reference.workspace = true
utoipa.workspace = true
tokio.workspace = true
chrono.workspace = true
