[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenv.workspace = true
rust-i18n.workspace = true
scalar_api_reference.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
validator.workspace = true
