[package]
name = "todos"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../core" }
actix-web.workspace = true
async-trait.workspace = true
chrono.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
actix-http.workspace = true
actix-rt.workspace = true
fake.workspace = true
